--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -7,6 +7,7 @@
 :quickstart-contributors: Santiago Cardenas, AWS Quick Start team
 :deployment_time: 5 minutes
 :default_deployment_region: us-east-1
+:production_build:
 // Uncomment these two attributes if you are leveraging
 // - an AWS Marketplace listing.
 // Additional content will be auto-generated based on these attributes.
