--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -6,7 +6,7 @@
 :partner-contributors: 
 :quickstart-contributors: Santiago Cardenas, AWS Quick Start team
 :deployment_time: 5 minutes
-:default_deployment_region: us-east-1
+:default_deployment_region: us-west-2
 :production_build:
 // Uncomment these two attributes if you are leveraging
 // - an AWS Marketplace listing.
