--- a/docs/partner_editable/additional_info.adoc
+++ b/docs/partner_editable/additional_info.adoc
@@ -54,7 +54,7 @@ with the Internet.
 
 * Highly available NAT gateways, where supported, instead of NAT instances. NAT
 gateways offer major advantages in terms of deployment, availability, and maintenance.
-For more information see the // TODO Need Link[comparison] provided in the Amazon VPC documentation.
+For more information see the http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/vpc-nat-comparison.html[comparison] provided in the Amazon VPC documentation.
 
 * Spare capacity for additional subnets, to support your environment as it grows or
 changes over time.
@@ -62,9 +62,9 @@ changes over time.
 For additional information about these best practices, see the following documentation:
 
 * http://d0.awsstatic.com/aws-answers/AWS_Single_VPC_Design.pdf[AWS Single VPC Design] from the AWS Answers website
-* // TODO Need Link[Your VPC and Subnets] in the Amazon VPC documentation
+* http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_Subnets.html[Your VPC and Subnets] in the Amazon VPC documentation
 * https://medium.com/aws-activate-startup-blog/practical-vpc-design-8412e1a18dcc[Practical VPC Design] in the AWS Startups blog
-* // TODO Need Link[Network ACLs] in the Amazon VPC documentation
+* http://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_ACLs.html[Network ACLs] in the Amazon VPC documentation
 
 === Subnet Sizing
 
@@ -74,7 +74,7 @@ found in public subnets. However, during deployment, you can use the CIDR block
 parameters to resize the CIDR scopes to meet your architectural needs.
 
 In the default subnet allocation, the VPC is divided into subnet types and then further
-segmented per Availability Zone, as illustrated in // TODO Need Link[Figure 1]. The Quick Start provides the
+segmented per Availability Zone, as illustrated in link:#_architecture[Figure 1]. The Quick Start provides the
 following default CIDR block sizes to maximize capacity:
 
 [cols="60,40a", options="header",grid=none, frame=topbot, stripes=even]
@@ -223,8 +223,8 @@ CIDR blocks to maximize capacity for this scenario are as follows:
 |===
 
 To customize the CIDR ranges for this scenario or to implement your own segmentation
-strategy, you can configure the Quick Start parameters described in //TODO Need Link[step 2]. For more
-information about VPC and subnet sizing, see the //TODO Need Link[AWS documentation].
+strategy, you can configure the Quick Start parameters described in link:#_launch_a_new_vpc[Launch a new VPC]. For more
+information about VPC and subnet sizing, see the https://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_Subnets.html#VPC_Sizing[AWS documentation].
 
 
 
