--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -1,14 +1,14 @@
-:quickstart-project-name: quickstart-repo-name
+:quickstart-project-name: quickstart-aws-vpc
 :quickstart-github-org: aws-quickstart
-:partner-product-name: Full Product Name
-:partner-product-short-name: Product Name
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: January
+:partner-product-name: Amazon Virtual Private Cloud
+:partner-product-short-name: Amazon VPC
+// :partner-company-name: Amazon Web Services, Inc.
+:doc-month: August
 :doc-year: 2022
-:partner-contributors: John Smith, {partner-company-name}
+// :partner-contributors:
 // :other-contributors: Akua Mansa, Trek10
-:aws-contributors: Janine Singh, AWS IoT Partner team
-:aws-ia-contributors: Toni Jones, AWS Integration & Automation team
-:deployment_time: 15 minutes
-:default_deployment_region: us-east-1
+// :aws-contributors:
+:aws-ia-contributors: Santiago Cardenas & Troy Lindsay, AWS Integration & Automation team
+:deployment_time: 5 minutes
+:default_deployment_region: us-west-2
 // :private_repo:
