--- a/docs/deployment_guide/partner_editable/deployment_options.adoc
+++ b/docs/deployment_guide/partner_editable/deployment_options.adoc
@@ -1,8 +1,5 @@
 // Edit this placeholder text as necessary to describe the deployment options.
 
-This Quick Start provides the following deployment options:
+This Quick Start provides the following deployment option:
 
-* http://qs_launch_permalink[Deploy {partner-product-short-name} into a new VPC^]. This option builds a new AWS environment that consists of the VPC, subnets, NAT gateways, security groups, bastion hosts, and other infrastructure components. It then deploys {partner-product-short-name} into this new VPC.
-* http://qs_launch_permalink[Deploy {partner-product-short-name} into an existing VPC^]. This option provisions {partner-product-short-name} in your existing AWS infrastructure.
-
-This Quick Start provides separate templates for these options. It also lets you configure Classless Inter-Domain Routing (CIDR) blocks, instance types, and {partner-product-short-name} settings.
+* https://fwd.aws/mm853[Deploy a new {partner-product-short-name}^]. This option builds a new AWS environment that consists of the VPC, subnets, NAT gateways, and other infrastructure components.
