--- a/docs/deployment_guide/partner_editable/architecture.adoc
+++ b/docs/deployment_guide/partner_editable/architecture.adoc
@@ -12,17 +12,16 @@ image::../docs/deployment_guide/images/architecture_diagram.png[Architecture]
 As shown in <<architecture1>>, this Quick Start sets up the following:
 
 * A highly available architecture that spans two Availability Zones.*
-* A virtual private cloud (VPC) configured with public and private subnets, according to AWS
-best practices, to provide you with your own virtual network on AWS.*
+* A virtual private cloud (VPC) configured with public and private subnets, according to AWS best practices, to provide you with your own virtual network on AWS.
 * In the public subnets:
-** Managed network address translation (NAT) gateways to allow outbound
-internet access for resources in the private subnets.*
-** A Linux bastion host in an Auto Scaling group to allow inbound Secure
-Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in public and private subnets.*
-* In the private subnets:
-** <item>.
-** <item>.
-// Add bullet points for any additional components that are included in the deployment. Ensure that the additional components are shown in the architecture diagram. End each bullet with a period.
-* <describe any additional components>.
+** Managed network address translation (NAT) gateways to allow outbound internet access for resources in the private subnets.
+* A configurable number of private subnets with dedicated custom network access control lists (ACLs) per Availability Zone.
+* Domain Name System (DNS) resolution in the VPC.
+* A VPC gateway endpoint for Amazon Simple Storage Service (Amazon S3), which provide a secure, reliable connection to Amazon S3 without requiring an internet gateway, NAT gateway, or virtual private gateway.
+** This uses the default endpoint policy, which gives any user or service within the VPC full access to Amazon S3 resources.
+   This policy supplements any IAM user policies or S3 bucket policies that you may have in place.
+** With these endpoints, you can access S3 resources from within the VPC created by the Quick Start.
+   These endpoints are valid only for the AWS Region in which you launch the Quick Start.
+** For more information about VPC endpoints, see the https://docs.aws.amazon.com/vpc/latest/userguide/vpc-endpoints-s3.html[AWS documentation].
 
-[.small]#* The template that deploys this Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
+NOTE: Default subnet sizes are based on a typical deployment but can be reconfigured, as discussed in the link:#_predeployment_steps[Predeployment steps] section.
