--- a/docs/deployment_guide/partner_editable/overview.adoc
+++ b/docs/deployment_guide/partner_editable/overview.adoc
@@ -1,5 +1,1 @@
-This Quick Start deploys {partner-product-name} ({partner-product-short-name}) on the AWS Cloud. This guide covers the steps necessary to deploy this Quick Start.
-
-// For advanced information about the product, troubleshooting, or additional functionality, refer to the https://{quickstart-github-org}.github.io/{quickstart-project-name}/operational/index.html[Operational Guide^].
-
-// For information about using this Quick Start for migrations, refer to the https://{quickstart-github-org}.github.io/{quickstart-project-name}/migration/index.html[Migration Guide^].
+This Quick Start deploys {partner-product-name} ({partner-product-short-name}) on the AWS Cloud. This guide covers the steps necessary to deploy this Quick Start. For more information on {partner-product-short-name}, refer to the https://docs.aws.amazon.com/vpc/index.html[Amazon Virtual Private Cloud Documentation^].
