--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -2,14 +2,15 @@
 
 == Predeployment steps
 
-In this Quick Start, the sizing of CIDR blocks used in the subnets is based on a typical deployment, where private subnets would have roughly double the number of instances found in public subnets.
-However, you can use the CIDR block parameters to resize the CIDR scopes to meet your architectural needs.
+In this Quick Start, the default sizing of CIDR blocks used in the subnets is based on a typical deployment, where private subnets would have roughly double the number of instances found in public subnets.
+You can use the CIDR block parameters to resize the CIDR scopes to meet your architectural needs.
 
-In the default subnet allocation, the VPC is divided into subnet types and then further segmented per Availability Zone, as illustrated in link:#_architecture[Figure 1].
-The Quick Start provides the following default CIDR block sizes to maximize capacity:
+In the default subnet allocation, the VPC is divided into subnet types and then further segmented by Availability Zone, as illustrated in <<architecture1>>.
+The Quick Start provides default CIDR block sizes to maximize capacity, as listed in <<default_ip_address_allocation>>:
 
+[#default_ip_address_allocation]
 .Default IP address allocation
-[cols="50,50a", options="header", grid=none, frame=topbot, stripes=even]
+[cols="40,60a", options="header", grid=none, frame=topbot, stripes=even]
 |===
 | VPC
 ^| 10.0.0.0/16
@@ -81,11 +82,12 @@ The Quick Start provides the following default CIDR block sizes to maximize capa
 !===
 |===
 
-Alternatively, there may be situations where you would want to separate the CIDR scopes by dividing the VPC into Availability Zones and then into subnet types.
-The recommended CIDR blocks to maximize capacity for this scenario are as follows:
+In some situations, you may want to separate the CIDR scopes by dividing the VPC into Availability Zones and then into subnet types.
+The recommended CIDR blocks to maximize capacity for this scenario are listed in <<alternate_IP_address_allocation>>:
 
+[#alternate_IP_address_allocation]
 .Alternate IP address allocation
-[cols="60,40a", options="header",grid=none, frame=topbot, stripes=even]
+[cols="40,60a", options="header",grid=none, frame=topbot, stripes=even]
 |===
 | VPC
 ^| 10.0.0.0/16
@@ -155,4 +157,4 @@ The recommended CIDR blocks to maximize capacity for this scenario are as follow
 !===
 |===
 
-For more information about VPC and subnet sizing, see the https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html#subnet-sizing[AWS documentation].
+For more information, refer to https://docs.aws.amazon.com/vpc/latest/userguide/configure-subnets.html#subnet-sizing[Subnet sizing^].
