--- a/docs/deployment_guide/partner_editable/post_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/post_deployment.adoc
@@ -8,6 +8,4 @@ By default, the custom ACLs are configured to allow all inbound and outbound tra
 For more information, refer to the Amazon VPC documentation:
 
 * https://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_ACLs.html[Control traffic to subnets using Network ACLs^]
-* https://docs.aws.amazon.com/AmazonVPC/latest/UserGuide/VPC_Appendix_NACLs.html[Recommended Network ACL Rules for Your VPC^]
-
-//TODO Troy, That last URL redirects to "What is Amazon VPC?" Maybe point here instead? https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html (Pro tip: We add a caret at the end of the link text, right before the closing bracket, throughout in our docs so that the links open in a new tab.)
+* https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html#vpc-recommended-nacl-rules[Recommended rules for VPC scenarios^]
